[tool.poetry]
name = "quantile-regression"
version = "0.1.0"
description = ""
authors = ["Marc Sabaté <msabvid@gmail.com>"]
readme = "README.md"
packages = [{include = "quantile_regression"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
scipy = "^1.13.0"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
pytest = "^8.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
